--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-SPRING_DATASOURCE_URL = jdbc:postgresql://localhost:5432/database
-SPRING_DATASOURCE_USERNAME = username
-SPRING_DATASOURCE_PASSWORD = password
-SPRING_DATASOURCE_DB = db
+SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/database
+SPRING_DATASOURCE_USERNAME=username
+SPRING_DATASOURCE_PASSWORD=password
+SPRING_DATASOURCE_DB=db
