--- a/DockerFile
+++ b/DockerFile
@@ -1,17 +1,23 @@
 FROM eclipse-temurin:21-jdk as build
-COPY . /app
 WORKDIR /app
 
-RUN chmod +x mvnw
-RUN ./mvnw package -DskipTests
-RUN mv -f target/*.jar app.jar
+COPY mvnw mvnw
+COPY .mvn .mvn
 
+RUN chmod +x mvnw
+COPY pom.xml pom.xml
+RUN ./mvnw dependency:go-offline
+
+COPY src src
+
+RUN ./mvnw clean package -DskipTests
 FROM eclipse-temurin:21-jre
 
 ARG PORT
 ENV PORT=${PORT}
 
-COPY --from=build /app/app.jar .
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
 
 RUN useradd runtime
 USER runtime
