--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,19 @@
 spring.application.name=apirest
 
 # Para desarrollo local
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+#spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-# Configuración de JPA/Hibernate
+# Para nube
+spring.datasource.url=jdbc:postgresql://${HOST}:${PORT}/${DATABASE}
+spring.datasource.username=${USER}
+spring.datasource.password=${PASSWORD}
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 
-server.port=${PORT:8080}
+spring.jpa.hibernate.ddl-auto=update
 
 spring.config.import=optional:file:.env[.properties]
