--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=apirest
 
 # Para desarrollo local
-#spring.datasource.url=${SPRING_DATASOURCE_URL}
-#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 # Para nube
-spring.datasource.url=jdbc:postgresql://${HOST}:${PORT}/${DATABASE}
-spring.datasource.username=${USER}
-spring.datasource.password=${PASSWORD}
+#spring.datasource.url=jdbc:postgresql://${HOST}:${PORT}/${DATABASE}
+#spring.datasource.username=${USER}
+#spring.datasource.password=${PASSWORD}
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
